--- a/app/src/main/res/drawable/ic_chat.xml
+++ b/app/src/main/res/drawable/ic_chat.xml
@@ -6,5 +6,8 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M6,4h4v16H6V4zM14,4h4v16h-4V4z"/>
+        android:pathData="M20,2H4C2.9,2 2,2.9 2,4v18l4,-4h14c1.1,0 2,-0.9 2,-2V4C22,2.9 21.1,2 20,2zM20,16H5.17L4,17.17V4h16V16z"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M7,9h10v2H7zM7,12h7v2H7z"/>
 </vector>
