--- a/app/src/main/res/drawable/ic_stop.xml
+++ b/app/src/main/res/drawable/ic_stop.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M6,4h4v16H6V4zM14,4h4v16h-4V4z"/>
+        android:pathData="M6,6h12v12H6z"/>
 </vector>
