--- a/app/src/main/res/layout/bottom_sheet_duo_connection.xml
+++ b/app/src/main/res/layout/bottom_sheet_duo_connection.xml
@@ -13,7 +13,7 @@
     <!-- Drag Handle -->
     <View
         android:id="@+id/dragHandle"
-        android:layout_width="40dp"
+        android:layout_width="50dp"
         android:layout_height="4dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="12dp"
@@ -357,8 +357,9 @@
     <!-- Loading Indicator -->
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ModernLoadingSpinner"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
         android:visibility="gone" />
