--- a/app/src/main/res/layout/fragment_duo.xml
+++ b/app/src/main/res/layout/fragment_duo.xml
@@ -187,12 +187,20 @@
             app:tabTextColor="@color/tabUnselectedText"
             app:tabTextAppearance="@style/DuoTabTextAppearance" />
 
-        <!-- ViewPager for tabs -->
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
+        <!-- SwipeRefreshLayout wrapping ViewPager -->
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefresh"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+            
+            <!-- ViewPager for tabs -->
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+                
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </LinearLayout>
 
