--- a/app/src/main/res/layout/fragment_channel_videos.xml
+++ b/app/src/main/res/layout/fragment_channel_videos.xml
@@ -46,8 +46,9 @@
         <!-- Loading -->
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ModernLoadingSpinner"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="center"
             android:visibility="gone"/>
 
