--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -11,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        android:paddingBottom="@dimen/spacing_lg"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="80dp"
+        app:layout_constraintBottom_toTopOf="@id/videoPlayerBarContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -45,5 +45,15 @@
             android:textSize="@dimen/text_size_lg"/>
 
     </LinearLayout>
+
+    <!-- Video Player Bar Container -->
+    <FrameLayout
+        android:id="@+id/videoPlayerBarContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
