--- a/app/src/main/res/layout/layout_player_sheet.xml
+++ b/app/src/main/res/layout/layout_player_sheet.xml
@@ -12,7 +12,7 @@
     <!-- Drag Handle -->
     <View
         android:id="@+id/dragHandle"
-        android:layout_width="40dp"
+        android:layout_width="60dp"
         android:layout_height="4dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="12dp"
@@ -143,7 +143,7 @@
     <SeekBar
         android:id="@+id/seekBarPlayer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="3dp"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
         android:max="100"
