--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -72,4 +72,10 @@
     <color name="colorWarning">#FFC107</color>
     <color name="colorError">#F44336</color>
     <color name="colorPrimaryLight">#2D2D2D</color>
+    <color name="errorColor">#EF4444</color>
+    <color name="colorAccentDark">#6D28D9</color>
+    
+    <!-- Video Player Bar -->
+    <color name="videoPlayerBarBackground">#1A1A1A</color>
+    <color name="videoPlayerBarAccent">#EC4899</color>
 </resources>
